...

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/to_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editIpAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ip_address"
                android:inputType="textNoSuggestions"
                android:autofillHints="192.168.100.1" />
        </com.google.android.material.textfield.TextInputLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pingButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ping"
                />

...
